# assist

./: CMakeLists.txt  LICENSE  README.md  api.lua  auto.lua  cqa.lua  cqa_compare.lua  fct_from_maqao.lua  help.lua  load_files.lua  rmod_api.lua  s2s.lua
lib/: CMakeLists.txt
lib/stub/: CMakeLists.txt  api.cpp  api.hpp  main.cpp  s2sDefines.cpp  s2sDefines.hpp  s2sFunction.cpp  s2sFunction.hpp  s2sLoop.cpp  s2sLoop.hpp  s2sProject.hpp  s2s_c.c
